--- a/style.css
+++ b/style.css
@@ -39,6 +39,12 @@ h2 {
   height: 2.5rem;
   text-align: center;
   width: 15rem;
+  border-radius: 0.3rem;
+}
+.color-sec input:focus-visible {
+  outline: none;
+  box-shadow: 0 0 10px 0 #ecd4f6;
+  border: 1px solid #22092c;
 }
 
 .color-output {
@@ -46,6 +52,7 @@ h2 {
   width: 40rem;
   margin: 2rem;
   background-color: #22092c;
+  border-radius: 0.3rem;
 }
 
 .copy {
