--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: "Roboto Slab";
-  src: url(/fonts/RobotoSlab-VariableFont_wght.ttf);
+  src: url(./fonts/RobotoSlab-VariableFont_wght.ttf);
 }
 
 body {
